# services-security-saml

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: saml_commands.py
nagare/services/security/: saml_auth.py
src/nagare/admin/: saml_commands.py
src/nagare/services/security/: saml_auth.py
